update budget project

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Abel|Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Css/bootstrap.min.css">
-    <link rel="stylesheet" href="Css/main.css">
+    <link rel="stylesheet" href="Css/style.css">
     <title>Khadouj</title>
 </head>
 <body>
@@ -133,12 +133,12 @@
             </figure>
             <p class="paragraph"><span>Responsive Design</span> As i start to learn about Bootstrap, I have done this design using only it to understand exactly how it works and to train more...! It's my first Responsive Website on Mobile and Computer.</p>
         </article>
-        <article class="guessGame">
+        <article class="budget">
             <div class="workStyle1"></div>
-            <p class="paragraph"><span>Guess Game</span> After I learned Html, Css and JavaScript I decided to develop my skills for that I made this game. <br>Enjoy your free game!</p>
+            <p class="paragraph"><span>Budget</span> After I learned Html, Css and JavaScript I decided to develop my skills for that I made this application.</p>
             <figure class="figure">
-                <img src="Image/Memory1.png" alt="Memory1">
-                <figcaption><a id="viewOnGithub" href="https://khadog.github.io/Guess-Game/" target="_blank">View on github</a></figcaption>
+                <img src="Image/Budget.png" alt="Budget">
+                <figcaption><a id="viewOnGithub" href="https://khadog.github.io/Budget/" target="_blank">View on github</a></figcaption>
             </figure>
         </article>
     </section>
