--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h1 id="aboutMe">About me</h1>
             <p id="profileText1" class="boldParagraph">I have a passion for Web Development and love to create for Web and Mobile Devices!</p>
             <p id="profileText2">I was born in Syria in 1994. After graduating from high school, I studied mathematics. And Now I'm studying Web Development at DCI.</p>
-            <a href="./Lebenslauf.pdf" class="my-cv" target="_blank">My CV</a>
+            <a href="./Lebenslauf.pages" class="my-cv" target="_blank">My CV</a>
         </main>
         <figure id="profileImg">
             <img src="Image/profile.jpg" alt="Portfolio">
