add latest project section

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </article>
             <article id="react">
                 <i class="fab fa-react"></i>
-                <h5 class="card-title">React</h5>
+                <h5 class="card-title">React & Redux</h5>
                 <p class="card-text">Components, Templates, Data, Building Websites And Applications, Routing URLs</p>
             </article>
             <article id="nodeJs">
@@ -115,7 +115,7 @@
                 <img src="Image/Olav.png" alt="Olav">
                 <figcaption><a id="viewOnGithub" href="https://arcane-savannah-76603.herokuapp.com/" target="_blank">View on heroku</a></figcaption>
             </figure>
-            <p class="paragraph"><span>Olav</span> When I started learning React I found out how much it is a powerful library so I decided to build this SPA. It is the last Project I have done using React and it is gonna be a real Website soon</p>
+            <p class="paragraph"><span>Olav</span> When I started learning React I found out how much it is a powerful library so I decided to build this SPA.</p>
         </article>
         <article class="e-shop">
             <div class="workStyle1"></div>
@@ -141,9 +141,26 @@
                 <figcaption><a id="viewOnGithub" href="https://khadog.github.io/Budget/" target="_blank">View on github</a></figcaption>
             </figure>
         </article>
+        <div class="restOfWorks">
+            <h1>Latest Projects</h1>
+            <figure>
+                <img src="Image/olav-blog.png" alt="Olav">
+                <figcaption>
+                    <p>React App</p>
+                    <a id="viewOnGithub" href="https://myolavblog.herokuapp.com/" target="_blank">View on heroku</a>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="Image/superCode.png" alt="Olav">
+                <figcaption>
+                    <p>MERN App & Raspberry</p>
+                    <p target="_blank">Private application</p>
+                </figcaption>
+            </figure>
+        </div>
     </section>
     <footer id="footer">
-        <h1>I'm Currently Looking For An Internship!</h1>
+        <h1>I'm Currently Looking For a Job!</h1>
         <p>&copy; 2019 by Khadouj.</p>
         <ul>
             <li>Say Hello</li>
